--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		</script>
 		<link rel=stylesheet href="style.css" />
 		<script src="script.js"></script>
-		<title>Hello</title>
+		<script src="github.js"></script>
+		<title>Github Viewer</title>
 	</head>
 	<body ng-controller="MainController">
 		<h1>{{message}}</h1>
